fix startup error for zentry